Updated icon url in nuspec

--- a/Boolli.nuspec
+++ b/Boolli.nuspec
@@ -7,7 +7,7 @@
     <authors>Francesco Bonizzi</authors>
     <owners>Francesco Bonizzi</owners>
     <projectUrl>https://github.com/FrancescoBonizzi/Boolli</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <iconUrl>https://github.com/FrancescoBonizzi/Boolli/blob/master/Bolli-icon-64x64.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Booli is a boolean expressions interpreter</description>
     <copyright>Copyright 2018</copyright>
