--- a/Boolli/Boolli.csproj
+++ b/Boolli/Boolli.csproj
@@ -48,6 +48,7 @@
     <Compile Include="AndNode.cs" />
     <Compile Include="AstInterpreter.cs" />
     <Compile Include="AstNode.cs" />
+    <Compile Include="Exceptions\EmptyExpressionException.cs" />
     <Compile Include="Extensions\BoolExtensions.cs" />
     <Compile Include="NamedAsyncBooleanFunction.cs" />
     <Compile Include="NamedBooleanFunction.cs" />
