--- a/Boolli/Boolli.csproj
+++ b/Boolli/Boolli.csproj
@@ -49,6 +49,9 @@
     <Compile Include="AstInterpreter.cs" />
     <Compile Include="AstNode.cs" />
     <Compile Include="Exceptions\EmptyExpressionException.cs" />
+    <Compile Include="Exceptions\InvalidFactorException.cs" />
+    <Compile Include="Exceptions\UnexpectedNodeException.cs" />
+    <Compile Include="Exceptions\InvalidTokenToParseException.cs" />
     <Compile Include="Extensions\BoolExtensions.cs" />
     <Compile Include="NamedAsyncBooleanFunction.cs" />
     <Compile Include="NamedBooleanFunction.cs" />
